test/1.2/errors/T_EDIVZ.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init {
    /// ERROR EDIVZ
    5 / 0;
    /// ERROR EDIVZ
    5 % 0;
    local int i = 0;
    // no error here
    1 / i;
    /// ERROR EDIVZ
    i / 0;
    /// ERROR EDIVZ
    i % 0;
}
